Renamed app package name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Final Food App</string>
+    <string name="app_name">Food On Wheelz</string>
     <string name="aft1">AppImage</string>
     <string name="aft2">Enter your registered mobile number and email below :</string>
     <string name="aft3">phoneimage</string>
